recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: not enough arguments for method recule: (x$1: Double)Unit.
Unspecified value parameter x$1.
    recule()
          ^